<resources>
    <string name="app_name">Sapphire Industries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="attendanceportal">Attendance Portal</string>
    <string name="username">Username</string>
    <string name="welcome">"Welcome to "</string>
    <string name="myapp">Portal</string>
    <string name="loremipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been  </string>
    <string name="imdone">"I'm Done "</string>
    <string name="or">OR</string>
    <string name="signinwith">"Sign in with "</string>
    <string name="fab_content_desc">flaotingbutton</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="adam">Adams Saneras</string>
    <string name="adamemail">Email: adam.saneras@gmail.com</string>
    <string name="Editprofile">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyBBn6MFdSJIvLUuuyo2pfoau76MzNCBErA</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="Save">Save</string>
    <string name="email">Your Email</string>
    <string name="name">Your Name</string>
    <string name="phone">Phone Number</string>
    <string name="city">City</string>
    <string name="citystate">City / State</string>
    <string name="country">Country</string>
    <string name="Edit">Edit Profile</string>
    <string name="location">Location :</string>
    <string name="address">Demo Address</string>
    <string name="iconfirm">I confirmed my location</string>
    <string name="emailme">Email</string>
    <string name="Update">Update</string>
    <string name="attendance">My Attendance</string>
    <string name="date">Date</string>
    <string name="clockin">Clock In</string>
    <string name="clockout">Clock Out</string>
    <string name="adward">Adward Maya</string>
    <string name="chandigarh">Chandigarh , Punjab , India </string>
    <string name="phonevalue">+91 8438886846563</string>
    <string name="emailvalue">adward.maya@gmail.com</string>
    <string name="dob">19 March 1995</string>
    <string name="pick_place">pickplace</string>
    <string name="default_info_title">default_info-tittle</string>
    <string name="default_info_snippet">snippet</string>
    <string name="comment">Comment</string>
    <string name="view"> View </string>
    <string name="commetcount">3</string>
    <string name="usernames">Adam Mickeley</string>
    <string name="whyulate">Why are u soo late today ?</string>
    <string name="hours">2 hours Ago</string>
    <string name="updateprofile">Update</string>
    <string name="emailmephone">Email or mobile number</string>
    <string name="logout">Logout</string>
    <string name="dialogTitle">Logout</string>
    <string name="dialogMessage">Are you Sure you want to Logout ?</string>
    <string name="failure_time_out_error">Request time out!</string>
    <string name="failure_something_went_wrong">Something went wrong please try again later!</string>
    <string name="failure_server_not_responding">Oops! looks like we are having internal problems. Please try again later.</string>
    <string name="failure_internet_connection">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="permission_denied">Permission has been denied, you need to give permission to do the operation, press OK to open settings</string>
    <string name="no_internet_message">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="please_wait">Please Wait</string>
    <string name="mapview">User Track Record</string>
    <string name="nodataavailable">No Data Available</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="firstnmame">First Name</string>
    <string name="emailadd">Email Address</string>
    <string name="addressess">Address</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="ok">ok</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Setting</string>
    <string name="timein">Time In</string>
    <string name="pleaseconfirmlocation">Please confirm your location first.</string>
    <string name="alreadytimeout">Already time out.</string>
    <string name="timeout">Time Out</string>
    <string name="todays">Todays \'s task</string>
    <string name="paymentreceive">Payment Received :</string>
    <string name="youwill">You will collect the payment from the GhanShyam Jewellers for the last deleivery</string>
    <string name="time">Time : </string>
    <string name="ten">10:00 A.M</string>
    <string name="status">Status :</string>
    <string name="inprogress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="totaldistance">Total travelled distance :</string>
    <string name="tenkm">10 Km.</string>
    <string name="task">My Task</string>
    <string name="tasks">My Tasks</string>
    <string name="details">Details</string>
    <string name="ghanshyam">Ghan Shyam Singh</string>
    <string name="productdesigner">Product Designer</string>
    <string name="sincetwenty">Since 2018</string>
    <string name="Tab1">Tab1</string>
    <string name="tab_2">Tab2</string>
    <string name="tab_3">Tab3</string>
    <string name="visitconfirm">Confirm Visit</string>
    <string name="products">Products</string>
    <string name="diesel">Diesel</string>
    <string name="addres">Address :</string>
    <string name="addressors">Sector 67 Sahibzada Ajit Singh Nagar, Punjab 160062</string>
    <string name="phoness">Contact :</string>
    <string name="gstnumber">GST Number :</string>
    <string name="gstvalue">GTSRTUIRJFJKIUNF</string>
    <string name="confirmyourvisit">Confirm your visit</string>
    <string name="confirmlocation">Confirm your location</string>
    <string name="confirmed">Confirmed</string>
    <string name="visitto">Visit to :</string>
    <string name="clientname">GhanShyam Goyal</string>
    <string name="dateandtime">Date and Time :</string>
    <string name="datevalue">22 October 2020   11:00 A.M</string>
    <string name="datevalues">22 Oct 2020</string>
    <string name="lastorder">Last Order :</string>
    <string name="ordervalue">EPF322445GGT</string>
    <string name="duepayment">Any Due Payment :</string>
    <string name="na">NA</string>
    <string name="seemore">see more …</string>
    <string name="call">Make a Phone Call</string>
    <string name="lastorders">Last Orders</string>
    <string name="pendingduesw">Pending Dues</string>
    <string name="calls">Call</string>
    <string name="productvalue">MTO thinner</string>
    <string name="quan">Quantity</string>
    <string name="tenval">10</string>
    <string name="price">Price</string>
    <string name="hundred">Rs. 500</string>
    <string name="totalprice">Total Price </string>
    <string name="thousand">Rs. 5000</string>
    <string name="amount">Amount :</string>
    <string name="servernotrespond"> Server not responding.. please try again later .</string>
    <string name="unknown_location">unknown location</string>
    <string name="default_channel">Default channnel</string>
    <string name="dumb">Dumb</string>
    <string name="customer">Customers</string>
    <string name="top_Performers">Top Performers</string>
    <string name="clientnamse">Name :</string>
    <string name="contact">Contact :</string>
    <string name="addressvalue"> House No. 3177 /2 , "</string>
    <string name="pendingamount">Pending Amount :</string>
    <string name="rupees">Rs. 50,000</string>
    <string name="pendingorder">Pending Payment</string>
    <string name="neworder">New Order</string>
    <string name="orderdate"> Order Date : </string>
    <string name="totalamount">Total Amount :</string>
    <string name="pricevalue">Rs. 50,000</string>
    <string name="orderstatus">Order Status :</string>
    <string name="paymentstatus">Payment Status :</string>
    <string name="delevered">Delivered</string>
    <string name="statusvalue">Due</string>
    <string name="Itename">Item Name  :</string>
    <string name="quant">Quan :</string>
    <string name="add">Add</string>
    <string name="itemname">MTO Thinner 300 ML .</string>
    <string name="quantity">Quan :</string>
    <string name="three">3</string>
    <string name="priceeess">Price :</string>
    <string name="total">Total Price :</string>
    <string name="fievthousan">Rs. 5000</string>
    <string name="fifteen">Rs. 15000</string>
    <string name="orderid">Order ID   :</string>
    <string name="orderidvalue">ESYUB23543554565</string>
    <string name="pricevalue2">Rs. 20,000</string>
    <string name="createcust">create customer</string>
    <string name="createuser">create user</string>
    <string name="confirmedpass">Confirmed Password</string>
    <string name="role">Role</string>
    <string name="usermanager">User Manager</string>
    <string name="createnewuser">Create New User</string>
    <string name="names">Name</string>
    <string name="state">State</string>
    <string name="searchuser">Search User</string>
    <string name="delete">Delete</string>
    <string name="viewattendance">View Attendance</string>
    <string name="edits">Edit</string>
    <string name="allusers">All Users</string>
    <string name="addcustomer">Add Customer</string>
    <string name="lastname">Last Name</string>
    <string name="middlename">Middle Name</string>
    <string name="customerlisitng">Customers</string>
    <string name="rolelisting">Role listing</string>
    <string name="submit">Submit</string>
    <string name="catgorylisting">Category Listing</string>
    <string name="unitlisting">Unit Listing</string>
    <string name="productmanagement">Product Management</string>
    <string name="orderlsiiting">Order Listing</string>
    <string name="orderlisting">Order Listing</string>
    <string name="permissions">Permissions</string>
    <string name="reports">Reports</string>
    <string name="order_ready_for_dispatched">Orders Ready for Dispatched</string>
    <string name="LatLongData">Database</string>
    <string name="LatLongReal">Real Lat</string>
    <string name="logs">Logs</string>
    <string name="bills">Bills</string>
    <string name="dashboard">DashBoard</string>
    <string name="target">Target *</string>
    <string name="setting">Settings</string>
    <string name="customerOutstanding">Customer Outstanding</string>
    <string name="dispatchedorder">Dispatched Order</string>
    <string name="approvedorder">Approved Order</string>
    <string name="addtarget">Add Target</string>
    <string name="targetdate">Target Date *</string>
    <string name="dates">Date *</string>
</resources>