<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">





    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:text="@string/products"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold">

    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_itemlisitng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp">

    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/gstnumber"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold">


    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/gstvalue">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/addres"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold">


    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:text="@string/address">

    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/phoness"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold">


    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:text="@string/phonevalue"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp">

        </TextView>


    </LinearLayout>

        <Button
            android:layout_width="@dimen/_204sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/btn_confirmvisit"
            android:background="@color/colorPrimaryDark"
            android:text="@string/confirmyourvisit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_24sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_height="wrap_content">
        </Button>


    </LinearLayout>


    </ScrollView>
</LinearLayout>