<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_12sdp"
    android:elevation="@dimen/_12sdp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

       <TextView
           android:layout_width="wrap_content"
           android:text="@string/itemname"
           android:textSize="@dimen/_14sdp"
           android:textStyle="bold"
           android:textColor="@color/colorPrimary"
           android:layout_height="wrap_content">

       </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/quantity"
                    android:textSize="@dimen/_10sdp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/three"
                    android:textSize="@dimen/_10sdp"

                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_height="wrap_content">


                </TextView>


            </LinearLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/priceeess"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"

                    android:layout_height="wrap_content">


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/fievthousan"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:textSize="@dimen/_10sdp"

                    android:layout_height="wrap_content">


                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content">


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/fifteen"
                    android:textSize="@dimen/_10sdp"

                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_height="wrap_content">


                </TextView>


            </LinearLayout>

        </LinearLayout>






    </LinearLayout>

   </androidx.cardview.widget.CardView>